Added peer package to controller

--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -164,6 +164,13 @@ body {
         border-radius: 10px;
         background-color: none;
     }
+
+    .video {
+        height: 100%;
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+    }
 }
 .zone {
     display: none;
