--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -82,7 +82,7 @@ body {
         }
         
         /* The Close Button */
-        #close {
+        .close {
             color: #aaaaaa;
             float: right;
             font-size: 28px;
