Added modal to upload and see code on robot

--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -127,6 +127,17 @@ body {
         width: 100%;
     }
 
+    .buttons-row {
+        flex-direction: row;
+        width: 100%;
+        justify-content: space-between;
+
+        #codeToUpload,
+        #codeOnRobot {
+            width: 50%;
+        }
+    }
+
     .buttons button,
     .buttons a {
         cursor: pointer;
