--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -200,6 +200,40 @@ body {
     }
 }
 
+
+/* SLIDER */
+.slider-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.value-container {
+    margin-bottom: 25px;
+}
+
+.slider {
+    width: 60%;
+    background: linear-gradient(to right, #6b8dff 0%, "red" 0%, white 0%, white 0%);
+    height: 20px;
+    transition: background 450ms ease-in;
+    -webkit-appearance: none;
+    border-radius: 25px;
+    box-shadow: 2px 8px, 13px, -3px;
+}
+
+.slider::-webkit-slider-thumb {
+    cursor: pointer;
+    appearance: none;
+    height: 35px;
+    width: 35px;
+    background-color: red;
+    border-radius: 50%;
+    border: 7px solid;
+}
+
 /*
 #page-root{
     display: flex;
