--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -171,6 +171,7 @@ body {
     width: 65%;
 
     #zone_joystick {
+        position: relative;
         height: 100%;
         border-radius: 10px;
         background-color: none;
