--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 @import url("https://fonts.cdnfonts.com/css/digital-numbers");
+@import url("//yoannmoinet.github.io/nipplejs/stylesheets/styles.css");
+@import url("//yoannmoinet.github.io/nipplejs/stylesheets/github-light.css");
 
 $black: #0c0c0c;
 $white: #ffffff;
@@ -22,150 +24,215 @@ body {
 #page-root {
     height: 100vh;
     width: 100vw;
+}
     
-    .header {
-        display: flex;
-        height: 65px;
-        width: 100%;
-        background-color: $black;
-        align-items: center;
-        justify-content: center;
+.header {
+    display: flex;
+    height: 65px;
+    width: 100%;
+    background-color: $black;
+    align-items: center;
+    justify-content: center;
 
-        h1 {
-            color: $white;
-            margin: 0px;
-            margin-top: 5px;
-            height: 40px;
-        }
-
-        .header-buttons {
-            position: absolute;
-            cursor: pointer;
-            right: 20px;
-        }
-
-        #back {
-            position: absolute;
-            cursor: pointer;
-            left: 20px;
-        }
+    h1 {
+        color: $white;
+        margin: 0px;
+        margin-top: 5px;
+        height: 40px;
     }
 
-    .content {
-        display: flex;
-        height: 85%;
-        margin: 20px;
-        
-        /* MODAL SECTION */
-        /* The Modal (background) */
-        .modal {
-            display: none;
-            position: fixed; 
-            z-index: 1; 
-            padding-top: 100px; /* Location of the box */
-            left: 0;
-            top: 0;
-            width: 100%; 
-            height: 100%; 
-            overflow: auto; /* Enable scroll if needed */
-            background-color: rgb(0,0,0); /* Fallback color */
-            background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    .header-buttons {
+        position: absolute;
+        cursor: pointer;
+        right: 20px;
+    }
+
+    #back {
+        position: absolute;
+        cursor: pointer;
+        left: 20px;
+    }
+}
+
+.content {
+    display: flex;
+    height: 85%;
+    margin: 20px;
+}
+   
+
+
+/* ---------- MODAL SECTION START ----------*/
+
+.modal-back {
+    .modal {
+        display: block;
+        padding-top: 0px;
+        overflow: none;
+
+        .header {
+            width: 90%;
+
+            .close-icon {
+                height: 35px;
+                width: 35px;
+            }
         }
-        
-        /* Modal Content */
-        .modal-content {
-            background-color: #fefefe;
-            margin: auto;
-            padding: 20px;
-            border: 1px solid #888;
-            width: 80%;
-        }
-        
+    }
+}
+
+.modal {
+    display: none;
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+
+    .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+    
         /* The Close Button */
         .close {
             color: #aaaaaa;
             float: right;
             font-size: 28px;
             font-weight: bold;
-        }
         
-        #close:hover,
-        #close:focus {
-            color: #000;
-            text-decoration: none;
-            cursor: pointer;
+            &:hover,
+            &:focus {
+                color: #000;
+                text-decoration: none;
+                cursor: pointer;
+            }
         }
-        
+
         .modal-header {
             padding: 2px 16px;
             background-color: #ecc30b;
             color: white;
         }
-        
+
         .modal-body {
             padding: 2px 16px;
         }
-        
+
         .modal-footer {
             padding: 2px 16px;
             background-color: #ecc30b;
             color: white;
         }
     }
+}
+/* ---------- MODAL SECTION END ----------*/
 
-    /* BUTTONS SECTION */
-    .buttons,
-    .buttons-main {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 35%;
-    }
 
-    .center-buttons {
-        width: 100%;
-    }
+/* ---------- BUTTONS SECTION START ----------*/
+.buttons,
+.buttons-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+}
 
-    .buttons-row {
-        flex-direction: row;
-        width: 100%;
-        justify-content: space-between;
+.center-buttons {
+    width: 100%;
+}
 
-        #codeToUpload,
-        #codeOnRobot {
-            width: 50%;
-        }
-    }
+.buttons-row {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
 
-    .buttons button,
-    .buttons a {
-        cursor: pointer;
-        background: $black;
-        color: $white;
-        font-family: $main-font;
+    #codeToUpload,
+    #codeOnRobot {
         width: 50%;
-        height: 100px;
-        min-height: 10%;
-        border-radius: 15px;
-        font-size: 17px;
-        margin: 25px;
-        text-decoration: none;
-        text-align: center;
-    }
-
-    .buttons a button {
-        width: 100%;
-        margin: 0px;
-    }
-
-    .buttons button:hover,
-    .buttons button:hover a {
-        background-color: grey;
     }
 }
 
-/* JOYSTICK SECTION */
+.buttons button,
+.buttons a {
+    cursor: pointer;
+    background: $black;
+    color: $white;
+    font-family: $main-font;
+    width: 50%;
+    height: 100px;
+    min-height: 10%;
+    border-radius: 15px;
+    font-size: 17px;
+    margin: 25px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.buttons a button {
+    width: 100%;
+    margin: 0px;
+}
+
+.buttons button:hover,
+.buttons button:hover a {
+    background-color: grey;
+}
+
+.camera-buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 60px;
+    margin: 10px;
+    width: 75%;
+
+    .connection {
+        width: 45%;
+        height: 100%;
+        max-width: 50%;
+        font-size: 12px;
+        margin: 0px;
+
+        &.active {
+            background-color: grey;
+        }
+    }
+}
+/* ---------- BUTTONS SECTION END ----------*/
+
+
+.video-container {
+    height: 100%;
+    width: 65%;
+    display:flex;
+    justify-content: center;
+    align-items:center;
+
+    video {
+        display: block;
+        position: absolute;
+    }
+
+    .canvas {
+        padding: 30px;
+        max-width: 100%;
+        display: block;
+        position: relative;
+        left: 0;
+        top: 0;
+    }
+}
+
+/* ---------- JOYSTICK SECTION START ----------*/
 .joystick {
     height: 100%;
     width: 65%;
@@ -184,6 +251,7 @@ body {
         padding: 0px;
     }
 }
+
 .zone {
     display: none;
     position: absolute;
@@ -200,9 +268,10 @@ body {
         background-color: $light-red;
     }
 }
+/* ---------- JOYSTICK SECTION END ----------*/
 
 
-/* SLIDER */
+/* ---------- SLIDER SECTION START ----------*/
 .slider-container {
     width: 100%;
     display: flex;
@@ -234,92 +303,4 @@ body {
     border-radius: 50%;
     border: 7px solid;
 }
-
-/*
-#page-root{
-    display: flex;
-    flex-direction: column;
-    color: white;
-    background-image: url("https://svgshare.com/i/naG.svg");
-
-
-    height:100vh;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-
-
-    & .image-container{
-        height:150px;
-        width:150px;
-        background-image:url("https://i.ibb.co/wLzCZWP/espruino.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-    }
-
-    & .title-container{
-        margin-top: 30px;
-        margin-bottom: 10px;
-    }
-
-    & .subtext-container{
-        margin:0;
-        max-width: 450px;
-        text-align: center;
-        color:white;
-
-        & a{
-            color: rgb(41, 201, 201);
-
-            &:active{
-                color:rgb(134, 41, 201)
-            }
-        }
-    }
-
-    & .hidden{
-        display: none;
-    }
-
-    & .esp-btn{
-        border:0;
-        padding-left:20px;
-        padding-right: 20px;
-        padding-top:7.5px;
-        padding-bottom:7.5px;
-        margin:15px;
-        margin-top: 40px;
-        border-radius: 10px;
-        cursor: pointer;
-
-        &.green{
-            background-color: #2dcf6b;
-            color:white;
-        }
-
-        &.red{
-            background-color: #cf432d;
-            color:white;
-        }
-    }
-
-    & .connection-notification{
-        position: fixed;
-        width: 350px;
-        color: #252525;
-        background-color: white;
-        border-radius: 5px;
-        border: 0.5px lightgray solid;
-        left:calc(50% - 175px);
-        bottom:20px;
-        animation: fadeIn 0.5s;
-        text-align: center;
-    }
-}
-*/
-
-
-@keyframes fadeIn {
-    0% { opacity: 0; bottom: -100px; }
-    100% { opacity: 1; bottom: 20px; }
-  }
+/* ---------- SLIDER SECTION END ----------*/
