--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -9,6 +9,7 @@ $grey: #808080;
 $dark-blue: #0B406C;
 $dark-red: #FF0000AA;
 $light-red: #FF000033;
+$green: #0B8600;
 $main-font: "Digital Numbers";
 
 body {
@@ -86,23 +87,22 @@ body {
     display: none;
     position: fixed; 
     z-index: 1; 
-    padding-top: 100px; /* Location of the box */
+    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%; 
     height: 100%; 
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
 
     .modal-content {
-        background-color: #fefefe;
+        background-color: $white;
+        color: $white;
         margin: auto;
         padding: 20px;
-        border: 1px solid #888;
         width: 80%;
+        border-radius: 10px;
     
-        /* The Close Button */
         .close {
             color: #aaaaaa;
             float: right;
@@ -119,20 +119,44 @@ body {
 
         .modal-header {
             padding: 2px 16px;
-            background-color: #ecc30b;
-            color: white;
+            background-color: $green;
+            height: 40px;
+            border-radius: 10px 10px 0px 0px;
+
+            h2 {
+                font-size: 25px;
+                color: $white;
+            }
         }
 
         .modal-body {
-            padding: 2px 16px;
+            padding: 20px;
+            color: $green;
+            text-align: center;
         }
 
         .modal-footer {
             padding: 2px 16px;
-            background-color: #ecc30b;
-            color: white;
+            background-color: $green;
+            height: 40px;
+            border-radius: 0px 0px 10px 10px;
         }
     }
+
+    button {
+        cursor: pointer;
+        background: $black;
+        color: $white;
+        border-radius: 15px;
+        font-size: 15px;
+        height: 50px;
+        width: 200px;
+        font-family: $main-font;
+    }
+    button:hover:enabled,
+    button:hover:enabled a {
+    background-color: $grey;
+}
 }
 /* ---------- MODAL SECTION END ----------*/
 
