--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -100,6 +100,7 @@ body {
         margin: auto;
         padding: 20px;
         width: 80%;
+        height: 220px;
         border-radius: 10px;
     
         .close {
