--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -91,7 +91,7 @@ body {
     top: 0;
     width: 100%; 
     height: 100%; 
-    overflow: auto;
+    overflow: scroll;
     background-color: rgba(0,0,0,0.5);
 
     .modal-content {
@@ -100,8 +100,14 @@ body {
         margin: auto;
         padding: 20px;
         width: 80%;
-        height: 220px;
         border-radius: 10px;
+
+        &.small {
+            height: 220px;
+        }
+        &.large {
+            height: 350px;
+        }
     
         .close {
             color: #aaaaaa;
@@ -321,10 +327,12 @@ button:disabled {
 /* ---------- SLIDER SECTION START ----------*/
 .slider-container {
     width: 100%;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin-bottom: 25px;
 }
 
 .value-container {
@@ -351,3 +359,8 @@ button:disabled {
     border: 7px solid;
 }
 /* ---------- SLIDER SECTION END ----------*/
+
+
+.remove-margin {
+    margin-top: 5px !important;
+}
