Added back aruco detection

--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -108,6 +108,9 @@ body {
         &.large {
             height: 350px;
         }
+        &.extra-large {
+            height: 100%;
+        }
     
         .close {
             color: #aaaaaa;
