Changed setting background

--- a/src/src/styles/app.scss
+++ b/src/src/styles/app.scss
@@ -367,3 +367,9 @@ button:disabled {
 .remove-margin {
     margin-top: 5px !important;
 }
+
+#settingsBtn {
+    background-color: $black;
+    border: none;
+    cursor: pointer;
+}
